high dpi screen support enhanced.

--- a/CS_WEB/footer.html
+++ b/CS_WEB/footer.html
@@ -32,18 +32,17 @@
 				<li><a href="#">上海交大致远学院</a></li>
 				<li><a href="#">清华交叉信息学院</a></li>
 				<li><a href="#">浙大竺可桢学院</a></li>
-				<li><a href="#">南大匡亚明学院</a></li>
-				<li><a href="#">川大吴玉章学院</a></li>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
 			</ul>
 		</div>
 		<div id="flink-right">
 			<ul>
 				<li><a href="#">武汉大学弘毅学堂</a></li>
-				<li><a href="#">Github</a></li>
-				<li><a href="#">Google Codejam</a></li>
-				<li><a href="#">Topcoder</a></li>
-				<li><a href="#">Codeforces</a></li>
-				<li><a href="#">国务院</a></li>
+				<li><a href="#">南大匡亚明学院</a></li>
+				<li><a href="#">川大吴玉章学院</a></li>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
 			</ul>
 		</div>
 	</div>
