pre-release polishing

--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -57,7 +57,7 @@
 						<div class="header_more"><a href="intro.html?c=1&p=1">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
-						<tr>
+						<!--<tr>
 							<td class="item_dot"></td>
 							<td class="item_title"><a href="#">Sample News #1</a></td>
 							<td class="item_date">2014.02.29</td>
@@ -81,7 +81,7 @@
 							<td class="item_dot"></td>
 							<td class="item_title"><a href="#">Sample News #5</a></td>
 							<td class="item_date">2014.02.29</td>
-						</tr>
+						</tr>-->
 					</table>
 				</div>
 			</div>
@@ -148,7 +148,7 @@
 			<div class="columns">
 				<div id="paperwork" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>文件与政策</p></div>
+						<div class="header_title"><p>招生动态</p></div>
 						<div class="header_more"><a href="paper.html">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
