fixed conflicts with html5 standard

--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -54,7 +54,7 @@
 				<div id="news" class="column">
 					<div class="col_header">
 						<div class="header_title"><p>取向动态</p></div>
-						<div class="header_more"><a href="intro.html?c=1&p=1">MORE&nbsp;&raquo;</a></div>
+						<div class="header_more"><a href="intro.html?c=1&amp;p=1">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
 						<!--<tr>
