--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -77,7 +77,7 @@
 							<td class="item_title"><a href="#">Sample News #4</a></td>
 							<td class="item_date">2014.02.29</td>
 						</tr>
-						<tr> 
+						<tr>
 							<td class="item_dot"></td>
 							<td class="item_title"><a href="#">Sample News #5</a></td>
 							<td class="item_date">2014.02.29</td>
@@ -187,7 +187,7 @@
 							</td>
 							<td>
 								<div class="gallery_container">
-									<div class="gallery_image" style="background:url(images/game.gif);">
+									<div class="gallery_image" style="background:url(images/game.png);">
 										<div class="gallery_padding"></div>
 									</div>
 									<a href="util.html?c=3">自制游戏</a>
@@ -209,4 +209,3 @@
 		<div id="footer"></div>
 	</body>
 </html>
-
