--- a/CS_WEB/teach.html
+++ b/CS_WEB/teach.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>山东大学泰山学堂计算机取向</title>
+		<title>人才培养 - 山东大学泰山学堂计算机取向</title>
 		<script src="js/jquery-1.11.0.js"></script>
-		<script src="js/unslider.min.js"></script>
 		<script src="js/cms.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
@@ -13,7 +12,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent();</script>
+		<script>loadContent(2);</script>
 	</body>
 </html>
-
