Fix Gallery on Touch Screen

--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -116,44 +116,59 @@
 					<table class="gallery">
 						<tr>
 							<td>
-								<div class="gallery_container">
-									<div class="gallery_image" style="background:url(images/app.jpg);">
-										<div class="gallery_padding"></div>
+								<a href="util.html?c=0">
+									<div class="gallery_container">
+										<div class="gallery_image">
+											<img src="images/app.jpg">
+											<div class="gallery_padding"></div>
+										</div>
+										<span>常用软件</span>
 									</div>
-									<a href="util.html?c=0">常用软件</a>
-								</div>
+								</a>
 							</td>
 							<td>
-								<div class="gallery_container">
-									<div class="gallery_image" style="background:url(images/dev.jpg);">
-										<div class="gallery_padding"></div>
+								<a href="util.html?c=1">
+									<div class="gallery_container">
+										<div class="gallery_image">
+											<img src="images/dev.jpg">
+											<div class="gallery_padding"></div>
+										</div>
+										<span>开发工具</span>
 									</div>
-									<a href="util.html?c=1">开发工具</a>
-								</div>
+								</a>
 							</td>
 							<td>
-								<div class="gallery_container">
-									<div class="gallery_image" style="background:url(images/website.jpg);">
-										<div class="gallery_padding"></div>
+								<a href="util.html?c=2">
+									<div class="gallery_container">
+										<div class="gallery_image">
+											<img src="images/website.jpg">
+											<div class="gallery_padding"></div>
+										</div>
+										<span>信息网站</span>
 									</div>
-									<a href="util.html?c=2">信息网站</a>
-								</div>
+								</a>
 							</td>
 							<td>
-								<div class="gallery_container">
-									<div class="gallery_image" style="background:url(images/game.png);">
-										<div class="gallery_padding"></div>
+								<a href="util.html?c=3">
+									<div class="gallery_container">
+										<div class="gallery_image">
+											<img src="images/game.png">
+											<div class="gallery_padding"></div>
+										</div>
+										<span>自制游戏</span>
 									</div>
-									<a href="util.html?c=3">自制游戏</a>
-								</div>
+								</a>
 							</td>
 							<td>
-								<div class="gallery_container">
-									<div class="gallery_image" style="background:url(images/project.jpg);">
-										<div class="gallery_padding"></div>
+								<a href="util.html?c=4">
+									<div class="gallery_container">
+										<div class="gallery_image">
+											<img src="images/project.jpg" href="util.html?c=4">
+											<div class="gallery_padding"></div>
+										</div>
+										<span>学期项目</span>
 									</div>
-									<a href="util.html?c=4">学期项目</a>
-								</div>
+								</a>
 							</td>
 						</tr>
 					</table>
