Fix Image Container on Touch Screen

--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -47,25 +47,37 @@
 					</div>
 					<table class="imagelist">
 						<tr>
-							<td class="image">
-								<div class="image_container" style="background:url(docs/acmicpc.png);">
-									<div class="image_popup"><a href="#">ACM ICPC</a></div>
-								</div>
+							<td>
+								<a href="#">
+									<div class="image_container">
+										<img src="docs/acmicpc.png">
+										<div class="image_popup">ACM ICPC</div>
+									</div>
+								</a>
 							</td>
-							<td class="image">
-								<div class="image_container" style="background:url(docs/seminar.jpg);">
-									<div class="image_popup"><a href="#">学术论坛</a></div>
-								</div>
+							<td>
+								<a href="#">
+									<div class="image_container">
+										<img src="docs/seminar.jpg">
+										<div class="image_popup">学术论坛</div>
+									</div>
+								</a>
 							</td>
-							<td class="image">
-								<div class="image_container" style="background:url(docs/bianlun.jpg);">
-									<div class="image_popup"><a href="#">辩论赛</a></div>
-								</div>
+							<td>
+								<a href="#">
+									<div class="image_container">
+										<img src="docs/bianlun.jpg">
+										<div class="image_popup">辩论赛</div>
+									</div>
+								</a>
 							</td>
-							<td class="image">
-								<div class="image_container" style="background:url(docs/speech.jpg);">
-									<div class="image_popup"><a href="#">演讲比赛</a></div>
-								</div>
+							<td>
+								<a href="#">
+									<div class="image_container">
+										<img src="docs/speech.jpg">
+										<div class="image_popup">演讲比赛</div>
+									</div>
+								</a>
 							</td>
 						</tr>
 					</table>
