--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -4,7 +4,7 @@
 		<title>山东大学泰山学堂计算机取向</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
-		<script src="js/jquery-1.11.0.js"></script>
+		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/unslider.min.js"></script>
 		<script src="js/modernizr.transition.js"></script>
 		<script src="js/index.js"></script>
