--- a/CS_WEB/prof.html
+++ b/CS_WEB/prof.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>专家队伍 - 山东大学泰山学堂计算机取向</title>
-		<script src="js/jquery-1.11.0.js"></script>
+		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/cms.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
