--- a/CS_WEB/index_en.html
+++ b/CS_WEB/index_en.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>山东大学泰山学堂计算机取向</title>
+		<title>Computer Science Department - Taishan College - Shandong University</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/unslider.min.js"></script>
 		<script src="js/modernizr.transition.js"></script>
 		<script src="js/index.js"></script>
-		<script>loadIndex(false);</script>
+		<script>loadIndex(true);</script>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	<body>
 		<div id="header">
 			<!--[if lte IE 7]>
-				<p style="text-align: center; padding-top: 40px; color: red; font-size: 14px; width:100%;">您正在使用不受支持的浏览器，请升级至最新版本的<a href="http://windows.microsoft.com/zh-CN/internet-explorer/download-ie" style="color: red;">Internet Explorer</a>。</p>
+				<p style="text-align: center; padding-top: 40px; color: red; font-size: 14px; width:100%;">You're using unsupported browser. Please upgrade to the latest <a href="http://windows.microsoft.com/en-US/internet-explorer/download-ie" style="color: red;">Internet Explorer</a>。</p>
 			<![endif]-->
 		</div>
 		<div id="content">
@@ -25,16 +25,16 @@
 			<div class="columns">
 				<div id="activity" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>集体活动</p></div>
-						<div class="header_more"><a href="intro.html?c=2">MORE&nbsp;&raquo;</a></div>
+						<div class="header_title"><p>Activities</p></div>
+						<div class="header_more"><a href="intro_en.html?c=2">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
 					</table>
 				</div>
 				<div id="news" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>取向动态</p></div>
-						<div class="header_more"><a href="intro.html?c=1&amp;p=1">MORE&nbsp;&raquo;</a></div>
+						<div class="header_title"><p>News</p></div>
+						<div class="header_more"><a href="intro_en.html?c=1&amp;p=1">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
 					</table>
@@ -43,8 +43,8 @@
 			<div class="columns">
 				<div id="contest" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>参与赛事</p></div>
-						<div class="header_more"><a href="work.html?c=1">MORE&nbsp;&raquo;</a></div>
+						<div class="header_title"><p>Competitions</p></div>
+						<div class="header_more"><a href="work_en.html?c=1">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="imagelist">
 						<tr>
@@ -60,7 +60,7 @@
 								<a href="#">
 									<div class="image_container">
 										<img src="docs/seminar.jpg">
-										<div class="image_popup">学术论坛</div>
+										<div class="image_popup">Seminar</div>
 									</div>
 								</a>
 							</td>
@@ -68,7 +68,7 @@
 								<a href="#">
 									<div class="image_container">
 										<img src="docs/bianlun.jpg">
-										<div class="image_popup">辩论赛</div>
+										<div class="image_popup">Debate</div>
 									</div>
 								</a>
 							</td>
@@ -76,7 +76,7 @@
 								<a href="#">
 									<div class="image_container">
 										<img src="docs/speech.jpg">
-										<div class="image_popup">演讲比赛</div>
+										<div class="image_popup">Speech</div>
 									</div>
 								</a>
 							</td>
@@ -85,29 +85,29 @@
 				</div>
 				<div id="learning" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>学习资源</p></div>
-						<div class="header_more"><a href="learn.html">MORE&nbsp;&raquo;</a></div>
+						<div class="header_title"><p>Resources</p></div>
+						<div class="header_more"><a href="learn_en.html">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
 						<tr>
 							<td class="item_dot"></td>
-							<td class="item_title"><a href="http://www.course.sdu.edu.cn">山东大学课程中心</a></td>
+							<td class="item_title"><a href="http://course.sdu.edu.cn:8088/G2S/">Course Center</a></td>
 						</tr>
 						<tr>
 							<td class="item_dot"></td>
-							<td class="item_title"><a href="learn.html?c=0">教学课件</a></td>
+							<td class="item_title"><a href="learn_en.html?c=0">Courseware</a></td>
 						</tr>
 						<tr>
 							<td class="item_dot"></td>
-							<td class="item_title"><a href="learn.html?c=1">历年考试真题</a></td>
+							<td class="item_title"><a href="learn_en.html?c=1">Exams</a></td>
 						</tr>
 						<tr>
 							<td class="item_dot"></td>
-							<td class="item_title"><a href="learn.html?c=2">电子书籍</a></td>
+							<td class="item_title"><a href="learn_en.html?c=2">E-books</a></td>
 						</tr>
 						<tr>
 							<td class="item_dot"></td>
-							<td class="item_title"><a href="learn.html?c=3">师长心得</a></td>
+							<td class="item_title"><a href="learn_en.html?c=3">Experience</a></td>
 						</tr>
 					</table>
 				</div>
@@ -115,71 +115,71 @@
 			<div class="columns">
 				<div id="paperwork" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>招生动态</p></div>
-						<div class="header_more"><a href="paper.html">MORE&nbsp;&raquo;</a></div>
+						<div class="header_title"><p>Admission</p></div>
+						<div class="header_more"><a href="paper_en.html">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="itemlist">
 					</table>
 				</div>
 				<div id="utility" class="column">
 					<div class="col_header">
-						<div class="header_title"><p>实用工具</p></div>
-						<div class="header_more"><a href="util.html">MORE&nbsp;&raquo;</a></div>
+						<div class="header_title"><p>Utility</p></div>
+						<div class="header_more"><a href="util_en.html">MORE&nbsp;&raquo;</a></div>
 					</div>
 					<table class="gallery">
 						<tr>
 							<td>
-								<a href="util.html?c=0">
+								<a href="util_en.html?c=0">
 									<div class="gallery_container">
 										<div class="gallery_image">
 											<img src="images/app.jpg">
 											<div class="gallery_padding"></div>
 										</div>
-										<span>常用软件</span>
+										<span>Software</span>
 									</div>
 								</a>
 							</td>
 							<td>
-								<a href="util.html?c=1">
+								<a href="util_en.html?c=1">
 									<div class="gallery_container">
 										<div class="gallery_image">
 											<img src="images/dev.jpg">
 											<div class="gallery_padding"></div>
 										</div>
-										<span>开发工具</span>
+										<span>Tools</span>
 									</div>
 								</a>
 							</td>
 							<td>
-								<a href="util.html?c=2">
+								<a href="util_en.html?c=2">
 									<div class="gallery_container">
 										<div class="gallery_image">
 											<img src="images/website.jpg">
 											<div class="gallery_padding"></div>
 										</div>
-										<span>信息网站</span>
+										<span>Websites</span>
 									</div>
 								</a>
 							</td>
 							<td>
-								<a href="util.html?c=3">
+								<a href="util_en.html?c=3">
 									<div class="gallery_container">
 										<div class="gallery_image">
 											<img src="images/game.png">
 											<div class="gallery_padding"></div>
 										</div>
-										<span>自制游戏</span>
+										<span>Games</span>
 									</div>
 								</a>
 							</td>
 							<td>
-								<a href="util.html?c=4">
+								<a href="util_en.html?c=4">
 									<div class="gallery_container">
 										<div class="gallery_image">
 											<img src="images/project.jpg" href="util.html?c=4">
 											<div class="gallery_padding"></div>
 										</div>
-										<span>学期项目</span>
+										<span>Projects</span>
 									</div>
 								</a>
 							</td>
