--- a/CS_WEB/teach.html
+++ b/CS_WEB/teach.html
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(2);</script>
+		<script>loadContent(2, false);</script>
 	</body>
 </html>
