--- a/CS_WEB/intro.html
+++ b/CS_WEB/intro.html
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(0);</script>
+		<script>loadContent(0, false);</script>
 	</body>
 </html>
