--- a/CS_WEB/learn.html
+++ b/CS_WEB/learn.html
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(3);</script>
+		<script>loadContent(3, false);</script>
 	</body>
 </html>
