--- a/CS_WEB/prof.html
+++ b/CS_WEB/prof.html
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(1);</script>
+		<script>loadContent(1, false);</script>
 	</body>
 </html>
