--- a/CS_WEB/util.html
+++ b/CS_WEB/util.html
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(6);</script>
+		<script>loadContent(6, false);</script>
 	</body>
 </html>
