--- a/CS_WEB/work.html
+++ b/CS_WEB/work.html
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(4);</script>
+		<script>loadContent(4, false);</script>
 	</body>
 </html>
