--- a/CS_WEB/work_en.html
+++ b/CS_WEB/work_en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>招生文件 - 山东大学泰山学堂计算机取向</title>
+		<title>Achievements - Computer Science Department - Taishan College - Shandong University</title>
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/cms.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/default.css">
@@ -11,6 +11,6 @@
 		<div id="header"></div>
 		<div id="content"></div>
 		<div id="footer"></div>
-		<script>loadContent(5, false);</script>
+		<script>loadContent(4, true);</script>
 	</body>
 </html>
