--- a/CS_WEB/cms/cms_template_en.html
+++ b/CS_WEB/cms/cms_template_en.html
@@ -1,10 +1,12 @@
 <div id="content_container">
-	<div class="sidebar">
-		<div class="sidebar_header">
-		</div>
-		<div class="sidebar_navi">
-			<ul>
-			</ul>
+	<div class="sidebar_container">
+		<div class="sidebar">
+			<div class="sidebar_header">
+			</div>
+			<div class="sidebar_navi">
+				<ul>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="article_container">
