--- a/CS_WEB/header_en.html
+++ b/CS_WEB/header_en.html
@@ -1,4 +1,3 @@
-<script language="javascript" type="text/javascript" src="js/GetCNDate.js"></script>
 <a id="top"></a>
 <div id="banner">
 	<div id="banner-content">
@@ -8,7 +7,7 @@
 			<div id="banner-content-right-logo"></div>
 			<div id="banner-content-right-navi">
 			<!--[if lte IE 8]>
-				<p style="color:orange;font-size:12px;margin-bottom:2px;">Your browser doesn't support CSS3, so some functions may break.<br>Please upgrade to the latest <a href="http://windows.microsoft.com/en-US/internet-explorer/download-ie" style="color: orange;">Internet Explorer</a></p>
+				<p style="color:orange;font-size:12px;margin-bottom:2px;">Your browser doesn't support CSS3.<br>Please upgrade to the latest <a href="http://windows.microsoft.com/en-US/internet-explorer/download-ie" style="color: orange;">Internet Explorer</a></p>
 			<![endif]-->
 			</div>
 		</div>
