--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>山东大学泰山学堂计算机取向</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=1024">
+		<meta name="description" content="山东大学泰山学堂计算机取向官方网站">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<script src="js/jquery-1.11.1.min.js"></script>
@@ -9,13 +12,9 @@
 		<script src="js/modernizr.transition.js"></script>
 		<script src="js/index.js"></script>
 		<script>loadIndex(false);</script>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	<body>
 		<div id="header">
-			<!--[if lte IE 7]>
-				<p style="text-align: center; padding-top: 40px; color: red; font-size: 14px; width:100%;">您正在使用不受支持的浏览器，请升级至最新版本的<a href="http://windows.microsoft.com/zh-CN/internet-explorer/download-ie" style="color: red;">Internet Explorer</a>。</p>
-			<![endif]-->
 		</div>
 		<div id="content">
 			<div id="slide">
