--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Testing Site for CSDTC Official Homepage</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta charset="utf-8">
+		<meta http-equiv="refresh" content="0; URL=http://5ki3s0x1c9.github.io/fuzzy-tribble/CS_WEB/">
 	</head>
 	<body>
 		<p>Please visit <a href="http://5ki3s0x1c9.github.io/fuzzy-tribble/CS_WEB/index.html">
