--- a/CS_WEB/index_en.html
+++ b/CS_WEB/index_en.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Computer Science Department - Taishan College - Shandong University</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=1024">
+		<meta name="description" content="Official Website for Computer Science Department of Taishan College">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<script src="js/jquery-1.11.1.min.js"></script>
@@ -9,7 +12,6 @@
 		<script src="js/modernizr.transition.js"></script>
 		<script src="js/index.js"></script>
 		<script>loadIndex(true);</script>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	</head>
 	<body>
 		<div id="header">
