Title and Description

--- a/CS_WEB/content.html
+++ b/CS_WEB/content.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>山东大学泰山学堂计算机取向</title>
+		<title>山东大学泰山学堂计算机取向 | Computer Science Department - Taishan College - Shandong University</title>
+		<meta name="description" content="山东大学泰山学堂计算机取向官方网站。Official Website for Computer Science Department of Taishan College.">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=1024">
 		<link rel="stylesheet" type="text/css" href="css/default.css">
@@ -20,7 +21,7 @@
 			</div>
 			<div id="article_container">
 				<div id="location">
-					<div id="loc_prompt">现在位置</div>
+					<div id="loc_prompt"></div>
 					<div id="loc_entry_1"></div>
 					<div id="loc_sep_1"></div>
 					<div id="loc_entry_2"></div>
