--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>山东大学泰山学堂计算机取向</title>
+		<title>山东大学泰山学堂计算机取向 | Computer Science Department - Taishan College - Shandong University</title>
+		<meta name="description" content="山东大学泰山学堂计算机取向官方网站。Official Website for Computer Science Department of Taishan College.">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=1024">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
