--- a/CS_WEB/header_en.html
+++ b/CS_WEB/header_en.html
@@ -46,11 +46,7 @@
 		$.get('content_en/map.json', function(data) {
 			if(typeof data == 'string') data = eval('(' + data + ')');
 			if(highlight >= data.length) window.location.href = '.';
-			if(highlight == 0) {
-				document.title = data[0].title;
-			} else {
-				document.title = data[highlight][0].page_name + ' - ' + data[0].title;
-			}
+			if(highlight == 0) document.title = data[0].title;
 			for(var i = 1; i < data.length; i++) {
 				$("#menubar-content-helper").before('<div id="menu' + i +
 					'" class="menubar-content-menu" style="width:' + data[i][0].width +
