--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/default.css">
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/jquery.cookie.js"></script>
-		<script src="js/modernizr.transition.js"></script>
+		<script src="js/modernizr.custom.88443.js"></script>
 		<script src="js/unslider.min.js"></script>
 		<script src="js/index.js"></script>
 	</head>
