--- a/CS_WEB/index_en.html
+++ b/CS_WEB/index_en.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" type="text/css" href="css/index.css">
+<script src="js/modernizr.custom.88443.js"></script>
+<script src="js/unslider.min.js"></script>
 <div id="slide"><ul></ul></div>
 <div class="columns">
 	<div id="s1c3" class="column">
