--- a/CS_WEB/content.html
+++ b/CS_WEB/content.html
@@ -16,3 +16,157 @@
 	<div id="placeholder">
 	</div>
 </div>
+<script>
+	var page_404 = '<p style="text-align:center;text-indent:0"><img style="display:inline" src="images/404.jpg"></p>';
+
+	String.prototype.format = String.prototype.f = function() {
+		var s = this,
+			i = arguments.length;
+		while(i--) {
+			s = s.replace(new RegExp('\\{' + i + '\\}', 'gm'), arguments[i]);
+		}
+		return s;
+	};
+
+	function renderPageButton(current_page, page_count, link_script) {
+		if(current_page != 1)
+			$('#pager').append('<div class="pagebutton"><a href="' + link_script(current_page - 1) + '">&lt;</a></div>');
+		for(var i = 1; i <= page_count; i++) {
+			if(i == current_page) {
+				$('#pager').append('<div class="pagebutton nowpage"><a href="' + link_script(i) + '">' + i + '</a></div>');
+			} else {
+				$('#pager').append('<div class="pagebutton"><a href="' + link_script(i) + '">' + i + '</a></div>');
+			}
+		}
+		if(current_page != page_count) $('#pager').append('<div class="pagebutton"><a href="' + link_script(current_page + 1) + '">&gt;</a></div>');
+	}
+
+	function countPage(length, num_per_page) {
+		return Math.floor((length - 1) / num_per_page) + 1;
+	}
+
+	function renderGrid(tag, lang, section, column, page) {
+		$.get('content_' + lang + '/' + section + '/' + column + '/0.json').success(function (data) {
+			if(typeof data == 'string') data = eval('(' + data + ')');
+			var page_count = countPage(data.length, 3 * 4);
+			$(tag).html(
+				'<div class="gridcont"></div>' +
+				'<div id="pager_container"><div id="pager"></div></div>');
+			var start = (p - 1) * 12, end = p * 12;
+			if(end > data.length) end = data.length;
+			var grid = [
+				'<div class="grid">',
+					'<div class="grid-image">',
+						'<img src="{0}">',
+					'</div>',
+					'<div class="grid-link">',
+						'<a href="{1}">{2}</a>',
+					'</div>',
+				'</div>'
+			].join('\n');
+			for(var i = start; i < end; i++) {
+				if(typeof data[i].url == 'string') {
+					$('.gridcont').append(grid.f(
+						data[i].image,
+						data[i].url,
+						data[i].title));
+				} else {
+					$('.gridcont').append(grid.f(
+						data.grids[i].image,
+						'?s=' + section + '&amp;c=' + column + '&amp;a=' + data[i].url,
+						data.grids[i].title));
+				}
+			}
+				renderPageButton(page, page_count, function(page) {
+					return "javascript:renderGrid('" + tag + "','" + lang + "'," + section + "," + column + "," + page + ")";
+				});
+		}).error(function(j, s, t) {console.log(s); });
+	}
+
+	function renderList(tag, lang, section, column, page) {
+		$.get('content_' + lang + '/' + section + '/' + column + '/0.json').success(function (data) {
+			if(typeof data == 'string') data = eval('(' + data + ')');
+			var page_count = countPage(data.length, 15);
+			$(tag).html('<table id="newslist"></table><div id="pager_container"><div id="pager"></div></div>');
+			var start = (page - 1) * 15, end = page * 15;
+			if(end > data.length) end = data.length;
+			for(var i = start; i < end; i++) {
+				if(typeof data[i].url == 'string') {
+					$('#newslist').append('<tr><td class="newsdot"></td><td class="newstitle"><a href="' + data[i].url +
+						'">' + data[i].title + '</a></td><td class="newsdate">' + data[i].date + '</td></tr>');
+				} else {
+					$('#newslist').append('<tr><td class="newsdot"></td><td class="newstitle"><a href="?s=' + section +
+						'&amp;c=' + column + '&amp;a=' + data[i].url + '">' + data[i].title + '</a></td><td class="newsdate">' +
+						data[i].date + '</td></tr>');
+				}
+			}
+			renderPageButton(page, page_count, function(page) {
+				return "javascript:renderList('" + tag + "','" + lang + "'," + section + "," + column + "," + page + ")";
+			});
+		}).error(function(j, s, t) {console.log(s); });
+	}
+
+	function renderContent(section, column, article, lang) {
+		$.get('content_' + lang + '/map.json', function(data) {
+			if(typeof data == 'string') data = eval('(' + data + ')');
+			var site_title = data[0].title;
+			$('#loc_prompt').text(data[0].loc_prompt);
+			data = data[section];
+			$('#loc_entry_1').text(data[0].page_name);
+			if(isNaN(column) || column < 1 || column >= data.length) column = 1;
+			document.title = data[column].name + ' - ' + site_title;
+			$('#sidebar_header').text(data[0].page_name);
+			for(var s = 1; s < data.length; s++) {
+				if(s == column) {
+					$('#sidebar_navi ul').append('<li><a href="?s=' + section + '&amp;c=' + s + '"><strong>' + data[s].name + '</strong></a></li>');
+				} else {
+					$('#sidebar_navi ul').append('<li><a href="?s=' + section + '&amp;c=' + s + '">' + data[s].name + '</a></li>');
+				}
+			}
+			if(isNaN(article)) {
+				$('#loc_entry_2').text(data[column].name);
+				switch (data[column].type) {
+				case 0:
+					$.get('content_' + lang + '/' + section + '/' + column + '.html', function(data) {
+						$('#placeholder').html(data);
+					}).error(function(j, s, t) {
+						console.log(s);
+						$('#loc_entry_2').text('404');
+						$('#placeholder').html(page_404);
+					});
+					break;
+				case 1:
+					renderList('#placeholder', lang, section, column, 1);
+					break;
+				case 2:
+					renderGrid('#placeholder', lang, section, column, 1);
+					break;
+				default:
+					$('#placeholder').html(page_404);
+				}
+			} else {
+				$('#loc_entry_2').html('<a href="?s=' + section + '&amp;c=' + column + '">' + data[column].name + '</a>');
+				$('#loc_sep_2').show();
+				$.get('content_' + lang + '/' + section + '/' + column + '/' + article + '.html', function(data) {
+					$('#placeholder').html(data);
+					var title_node = $('#placeholder .article .article_title');
+					if(title_node.length != 0) {
+						var title = title_node.text();
+						document.title = title + ' - ' + site_title;
+					} else {
+						var title = a;
+					}
+					$('#loc_entry_3').text(title);
+				}).error(function(j, s, t) {
+					console.log(s);
+					$('#loc_entry_3').text('404');
+					$('#placeholder').html(page_404);
+				});
+			}
+		}).error(function(j, s, t) {
+			console.log(s);
+			$('#loc_entry_1').text('404');
+			$('#placeholder').html(page_404);
+		});
+	}
+</script>
