--- a/CS_WEB/footer_cn.html
+++ b/CS_WEB/footer_cn.html
@@ -16,14 +16,7 @@
 		</ul>
 	</div>
 	<div id="bottom-logo"></div>
-	<p>山东大学泰山学堂依托数学、物理学、化学、生物学、计算机科学
-		等5个学科良好的学科基础，并综合利用国内外优质教育资源，
-		借鉴世界一流大学的经验，汲取齐鲁文化精华，重点在培养模式、
-		教学方法、学生遴选、制度创新等方面进行大胆的探索和实践。
-		通过多元、多种、多次和专家选才的方式，选拔具有培养潜质的优秀学生，
-		为其配备一流师资，创造一流学习条件，营造一流学术氛围，
-		形成具有山大特色的人才培养模式和机制，培养基础扎实、学风朴实，
-		有德性、富有创新精神和创新能力的未来拔尖创新人才。</p>
+	<p>山东大学泰山学堂依托数学、物理学、化学、生物学、计算机科学等5个学科良好的学科基础，并借鉴世界一流大学的经验，汲取齐鲁文化精华，重点在培养模式、教学方法、学生遴选、制度创新等方面进行大胆的探索和实践。选拔具有培养潜质的优秀学生，为其配备一流师资，创造一流学习条件，营造一流学术氛围，培养基础扎实、学风朴实，有德性、富有创新精神和创新能力的未来拔尖创新人才。</p>
 	<div id="bottom-flink">
 		<p>他山之石</p>
 		<div id="flink-left">
