--- a/CS_WEB/footer_en.html
+++ b/CS_WEB/footer_en.html
@@ -39,7 +39,7 @@
 		<p>Address: 27 Shanda Nanlu, Jinan City, Shandong Province</p>
 		<p>Postcode: 250100 Email: taishanxt@sdu.edu.cn Phone: 0531-88362386</p>
 	</div>
-	<div id="bottom-legal" style="top:185px">
+	<div id="bottom-legal">
 		<p>&copy; 2014 CSDTC</p>
 		<p>All Rights Reserved.</p>
 	</div>
